--- a/app.plist
+++ b/app.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://43.228.76.75:8848/download/onetop.ipa</string>
+					<string>https://43.228.76.75:8848/download/onetop.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
