--- a/app_wh.plist
+++ b/app_wh.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://43.228.76.75:8848/download/wuhan.ipa</string>
+					<string>https://43.228.76.75:8848/download/wuhan.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
